--- a/.github/工作流程/build_ErfanGSIs.yml
+++ b/.github/工作流程/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/9.2.28/miui_MIMAX652_9.2.28_43e4a1aa44_7.0.zip
+  ROM_URL: https://a6npd1kfbmp499hirknrruhelde4fiikm1ji1u2vpq3t7p73u8ffvdev.qc.x.bsgslb.cn:2434/xdispatch27950b2a24964c3d/bigota.d.miui.com/V12.5.1.0.QEACNXM/miui_MI8_V12.5.1.0.QEACNXM_8e708da17d_10.0.zip?bsreqid=b1bfdffbe3cb334198a002613cca9330
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
